# codex4ampero

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
bridge/: pubspec.yaml
docs/: architecture.md  development.md  protocol.md  safety.md
examples/: clear-rhythm.plan.json  yorushika-hana-ni-bourei-tele-overdrive-solo.plan.json  yorushika-hana-ni-bourei-tele-solo-serial-routing.plan.json  yorushika-hana-ni-bourei-tele-solo.plan.json
scripts/: build-bridge.ps1  install-skill.ps1  test.ps1
skills/ampero-tone/: SKILL.md
skills/ampero-tone/agents/: openai.yaml
skills/ampero-tone/references/: conversation-flow.md  plan-schema.md  safety-rules.md  tone-language.md  tone-research.md
skills/ampero-tone/scripts/: ampero.py
src/ampero_control/: __init__.py  catalog.py  cli.py  constants.py  controller.py  dart_bridge.py  errors.py  installation.py  native.py  patch_location.py  plan.py  preset.py  preset_save.py  protocol.py  safety.py  tone_research.py
tests/: preset_fixture.py  test_catalog.py  test_cli.py  test_controller.py  test_native.py  test_patch_location.py  test_plan.py  test_preset.py  test_preset_save.py  test_protocol.py  test_skill_conversation.py  test_skill_wrapper.py
