[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ampero-control"
version = "0.1.0"
description = "Codex-native control layer for HOTONE Ampero II devices"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ampero-control = "ampero_control.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"
